# SLP-LivePose

./: .gitignore  README.md  pyproject.toml
data/: calibration_parser.py
docs/: SLP Report.tex
livepose/: __init__.py  __main__.py  calibration.py  core.py  filters.py  importer.py  pipeline.py  server.py  sources.py  tracker.py
livepose/_static/: index.html
livepose/_static/assets/: index-BB859z5_.js  index-DCR2wXRi.css
scripts/: create_downscaled_dataset.py
ui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js
ui/src/: App.tsx  CalibrationPanel.tsx  Controls.tsx  FeedGrid.tsx  ImportPanel.tsx  MetricsPanel.tsx  ProcessingPanel.tsx  Scene3D.tsx  Sparkline.tsx  Timeline.tsx  VideoModal.tsx  metrics.ts  poseOverlay.ts  projection.ts  socket.ts  theme.css  types.ts
