[project]
name = "livepose"
version = "0.1.0"
description = "Real-time multi-camera pose estimation with 3D visualization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "numpy>=1.26",
    "scipy>=1.13",
    "opencv-python>=4.10",
    "ultralytics>=8.3",
    "skellytracker>=2024.10.1011",
    "websockets>=13",
    "pydantic>=2.9",
    "pillow>=11",
    "mediapipe>=0.10.35",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.7"]
mediapipe = ["mediapipe>=0.10"]
rtmpose = ["rtmlib>=0.0.1"]

[project.scripts]
livepose = "livepose.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["livepose"]

[tool.ruff]
line-length = 110
target-version = "py311"
